--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.16.0",
+    "@sweetalert2/themes": "^5.0.17",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -11,9 +15,12 @@
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "catto-css": "^3.20.0",
+    "emailjs-com": "^3.2.0",
     "gsap": "^3.12.5",
     "i18next": "^23.11.5",
     "i18next-http-backend": "^2.5.2",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.14",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-bootstrap-icons": "^1.11.3",
@@ -55,6 +62,7 @@
     ]
   },
   "devDependencies": {
-    "catto": "^1.1.1"
+    "catto": "^1.1.1",
+    "express": "^4.19.2"
   }
 }
